[package]
name = "worldlycli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.107"
csv = "1.3.1"
base64 = "0.22.1"
gcp_auth = "0.12.3"
